src/tests/routes/trustpub/gitlab_configs/snapshots/integration__routes__trustpub__gitlab_configs__list__crate_with_no_configs-2.snap
---
source: src/tests/routes/trustpub/gitlab_configs/list.rs
expression: response.json()
---
{
  "gitlab_configs": [],
  "meta": {
    "next_page": null,
    "total": 0
  }
}
