src/tests/routes/trustpub/gitlab_configs/snapshots/integration__routes__trustpub__gitlab_configs__list__pagination-2.snap
---
source: src/tests/routes/trustpub/gitlab_configs/list.rs
expression: json
---
{
  "gitlab_configs": [
    {
      "crate": "foo",
      "created_at": "[datetime]",
      "environment": null,
      "id": 1,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "repo-0",
      "workflow_filepath": ".gitlab-ci.yml"
    },
    {
      "crate": "foo",
      "created_at": "[datetime]",
      "environment": null,
      "id": 2,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "repo-1",
      "workflow_filepath": ".gitlab-ci.yml"
    },
    {
      "crate": "foo",
      "created_at": "[datetime]",
      "environment": null,
      "id": 3,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "repo-2",
      "workflow_filepath": ".gitlab-ci.yml"
    },
    {
      "crate": "foo",
      "created_at": "[datetime]",
      "environment": null,
      "id": 4,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "repo-3",
      "workflow_filepath": ".gitlab-ci.yml"
    },
    {
      "crate": "foo",
      "created_at": "[datetime]",
      "environment": null,
      "id": 5,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "repo-4",
      "workflow_filepath": ".gitlab-ci.yml"
    }
  ],
  "meta": {
    "next_page": "?crate=foo&per_page=5&seek=NQ",
    "total": 15
  }
}
