src/tests/routes/trustpub/gitlab_configs/snapshots/integration__routes__trustpub__gitlab_configs__list__pagination-8.snap
---
source: src/tests/routes/trustpub/gitlab_configs/list.rs
expression: json
---
{
  "gitlab_configs": [],
  "meta": {
    "next_page": null,
    "total": 15
  }
}
